Completed the Comments Documentation
