# 12-Mini_Project/postaway/src/features/comments/comments.router.js
@@ -7,6 +7,6 @@ const commentsController = new CommentsController();
 commentsRouter.get("/get/:postId", commentsController.get); //* Get Comments of a Post
 commentsRouter.post("/create", commentsController.add); //* Create Comment on Post
 commentsRouter.put("/update/:postId", commentsController.update); //* Update Comment on Post
-commentsRouter.delete("/delete/:commentId", commentsController.delete); //* Delete Comment of Post
+commentsRouter.delete("/delete", commentsController.delete); //* Delete Comment of Post
 
 export default commentsRouter;
